# pyscal

./: .buildinfo  .codacy.yml  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  SECURITY.md  contributing.html  contribution.html  genindex.html  history.html  index.html  installation.html  introduction.html  modelling.html  modules.html  mypy.ini  objects.inv  py-modindex.html  pylint-ignore.md  pyproject.toml  pyscal.html  pyscal.utils.html  readme.html  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  test_requirements.txt  usage.html
.github/workflows/: codecov.yml  codeql.yml  publish.yml  pyscal.yml
_modules/: index.html  pyscal.html
_modules/pyscal/: factory.html  gasoil.html  gaswater.html  plotting.html  pyscal_logger.html  pyscalcli.html  pyscallist.html  scalrecommendation.html  utils.html  wateroil.html  wateroilgas.html
_modules/pyscal/utils/: capillarypressure.html  interpolation.html  monotonicity.html  monotonocity.html  relperm.html  string.html  testing.html
_sources/: contributing.rst.txt  history.rst.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt  modelling.rst.txt  modules.rst.txt  pyscal.rst.txt  pyscal.utils.rst.txt  readme.rst.txt  usage.rst.txt
_sources/pyscal/: pyscal.__version__.rst.txt  pyscal.constants.rst.txt  pyscal.pyscal_logger.rst.txt  pyscal.rst.txt  pyscal.utils.rst.txt  pyscal.version.rst.txt  pyscal.wateroilgas.rst.txt
_static/: documentation_options.js
ci/: testkomodo.sh
ci/jenkins/: testkomodo.sh
docs/: Makefile  conf.py  contributing.rst  contribution.rst  history.rst  index.rst  installation.rst  introduction.rst  make_parameter_guideplot.py  make_plots.py  modelling.rst  readme.rst  usage.rst
docs/_templates/: layout.html
docs/pyscal/: pyscal.factory.rst  pyscal.gasoil.rst  pyscal.gaswater.rst  pyscal.plotting.rst  pyscal.pyscalcli.rst  pyscal.pyscallist.rst  pyscal.scalrecommendation.rst  pyscal.utils.capillarypressure.rst  pyscal.utils.interpolation.rst  pyscal.utils.monotonicity.rst  pyscal.utils.relperm.rst  pyscal.utils.string.rst  pyscal.utils.testing.rst  pyscal.version.rst  pyscal.wateroil.rst
pyscal/: __init__.py  _version.py  cli.py  constants.py  factory.py  gasoil.py  gaswater.py  plotting.py  pyscal.__version__.html  pyscal.constants.html  pyscal.factory.html  pyscal.gasoil.html  pyscal.gaswater.html  pyscal.html  pyscal.plotting.html  pyscal.pyscal_logger.html  pyscal.pyscalcli.html  pyscal.pyscallist.html  pyscal.scalrecommendation.html  pyscal.utils.capillarypressure.html  pyscal.utils.html  pyscal.utils.interpolation.html  pyscal.utils.monotonicity.html  pyscal.utils.relperm.html  pyscal.utils.string.html  pyscal.utils.testing.html  pyscal.version.html  pyscal.wateroil.html  pyscal.wateroilgas.html  pyscalcli.py  pyscallist.py  scalrecommendation.py  scalrecommentation.py  utils.py  version.py  wateroil.py  wateroilgas.py
pyscal/utils/: capillarypressure.py  interpolation.py  monotonicity.py  monotonocity.py  relperm.py  string.py  testing.py
src/pyscal/: __init__.py  __version__.py  constants.py  factory.py  gasoil.py  gaswater.py  plotting.py  pyscal_logger.py  pyscalcli.py  pyscallist.py  scalrecommendation.py  wateroil.py  wateroilgas.py
src/pyscal/utils/: capillarypressure.py  interpolation.py  monotonicity.py  relperm.py  string.py  testing.py
tests/: benchme.py  common.py  conftest.py  interactive_tests.py  test_estimateendpoints.py  test_factory.py  test_fromtable.py  test_gasoil.py  test_gaswater.py  test_interactive_plots.py  test_logging.py  test_plotting.py  test_pyscalcli.py  test_pyscalendpoint.py  test_pyscallist.py  test_scalrecommendation.py  test_slgof.py  test_utils.py  test_utils_capillarypressure.py  test_utils_interpolation.py  test_utils_monotonicity.py  test_utils_monotonocity.py  test_utils_relperm.py  test_utils_string.py  test_utils_testing.py  test_wateroil.py  test_wateroil_corey.py  test_wateroil_pc.py  test_wateroil_saturation.py  test_wateroilgas.py  utils.py
tests/data/: pyscal_config_simple_let_hyst.csv  relperm-input-example-norwegian.csv  relperm-input-example.xlsx  relperm-input-example_skjaeveland.csv  scal-pc-input-example.xls  scal-pc-input-example.xlsx
