[build-system]

requires = [
    "setuptools>=45.0",
    "setuptools_scm[toml]>=6.2",
]

build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/pyscal/version.py"

[project]
name = "pyscal"
description = "Generate relative permeability include files for Eclipse reservoir simulator"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Håvard Berland", email = "havb@equinor.com" },
]
keywords = ["relative permeability", "capillary pressure", "reservoir simulation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
]
dynamic = ["version"]

dependencies = [
    "matplotlib",
    "numpy",
    "openpyxl",
    "pandas",
    "scipy",
    "xlrd",
]

[project.optional-dependencies]
tests = [
    "ruff",
    "mypy",
    "hypothesis",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "rstcheck",
    "pylint",
]

docs = [
    "autoapi",
    "sphinx<8.2.0",
    "sphinx-argparse",
    "sphinx-autodoc-typehints<2.4",
    "sphinx_rtd_theme",
]

[project.urls]
Homepage = "https://github.com/equinor/pyscal"
Documentation = "https://equinor.github.io/pyscal/"
Repository = "https://github.com/equinor/pyscal"

[project.scripts]
pyscal = "pyscal.pyscalcli:main"


[tool.ruff]
lint.select=[
    "E",
    "F",
    "I",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "SIM",
    "W",
    "NPY",
    "PD",
    "PL",
    "RUF",
]

line-length = 88

lint.ignore = ["E741",
               "PLR2004",  # Magic value
               "PLR0911",  # Too many return statements
               "PLR0912",  # Too many branches
               "PLR0913",  # Too many arguments
               "PLR0915",  # Too many statements
               "PD901",  # Avoid using the generic variable name df for Dataframes
               ]

[[tool.mypy.overrides]]
module = ["numpy.*", "pyscal.version", "pandas.*", "matplotlib.*", "scipy.*", "xlrd.*", "openpyxl.*"
]
ignore_missing_imports = true


[tool.pytest.ini_options]
norecursedirs = [
    ".git",
]
xfail_strict = "True"

addopts = "-ra --strict-markers --ignore=docs/conf.py --ignore=.eggs"

markers = [
    "integration: marks a test as an integration test",
    "plot: marks a test as interactive, plots will flash to the screen",
    "slow: a test that is expected to take up to a second or so to execute",
]

[tool.rstcheck]
ignore_directives = ["argparse", "automodule"]

[tool.pylint]
disable = "missing-module-docstring"

